Implement GET /apps request
