# swagger.yaml
@@ -90,6 +90,32 @@ paths:
               example:
                 success: false
                 error: 'Admin with this login not exists'
+  /apps:
+    get:
+      summary: Get authorized admin's apps
+      responses:
+        '200':
+          description: Returns admin's apps
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  apps:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/App'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+              example:
+                success: false
+                error: 'Unauthorized'
 components:
   schemas:
     errorResponse:
@@ -113,3 +139,13 @@ components:
         login:
           type: string
           default: 'test@example.com'
+    App:
+      type: object
+      properties:
+        name:
+          type: string
+          default: 'App name'
+        access_key:
+          type: string
+        admin_id:
+          type: string
